now uses resolvers and records