@@ -17,9 +17,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'com.graphql-java:graphql-java:15.0'
-	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:2.0'
-	implementation 'com.google.guava:guava:29.0-jre' //TODO replace with native java methods
+	implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.1.0'
+	implementation 'com.graphql-java-kickstart:graphql-java-tools:6.2.0'
+
 
 	runtimeOnly 'com.h2database:h2'
 
@@ -28,6 +28,11 @@ dependencies {
 	}
 }
 
+compileJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+
 test {
+	jvmArgs(['--enable-preview'])
 	useJUnitPlatform()
 }
